--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
 }
 :root{
-    --main-heading-stats: #ffffff;
+    --main-heading-stats: hsl(0, 0%, 100%);
     --cardbg: #1b1938;
-    --main: hsla(277, 64%, 61%, 0.5);
-    --paragraph: #ffffffbf;
+    --main: hsla(277, 64%, 61%, 0.6);
+    --paragraph: hsla(0, 0%, 100%, 0.749);
      --mainbg:  #090b1a;
 
 
@@ -37,7 +37,7 @@ body{
 
 
 span.Alone{
-    color: purple;
+    color: var(--main);
 }
 .f-size1{font-size: 1.9em;}
 .f-size2{font-size: 1em;}
@@ -52,14 +52,13 @@ span.Alone{
 .F-opacity{opacity: 40%;}
 header{
     display: flex;
-    /* display: none; */
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: var(--mainbg);
 }
 .container{
-    max-width: 1160px;
+    max-width: 1440px;
     margin:auto;
     overflow: hidden;
     padding: 8%; 
@@ -74,7 +73,7 @@ header{
 }
 .Box .row1{
     flex: 1;
-    padding: 3em 4em;
+    padding: 5em 7em;
     color: #fff;
 }
 .row2{
@@ -95,9 +94,9 @@ header{
     
 }
 .Box .row2 img{
+    display: block;
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
 }
 .Box .row1 .item{
     display: flex;
