--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ span.Alone{
 .f-size1{font-size: 1.9em;}
 .f-size2{font-size: 1em;}
 .p-t{padding-top: 1.4em;}
+.p-tt{padding-top: 2em;}
 .m-b{margin-bottom: 0.5em;}
 .m-b1{margin-bottom: 1em;}
 .f-weight1{font-weight: 100;}
@@ -101,6 +102,7 @@ header{
 .Box .row1 .item{
     display: flex;
     justify-content:  space-between;
+    
 } 
 @media only screen and (max-width: 300px){
     .Box .row1 .f-size1{
