--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --cardbg: #1b1938;
     --main: hsla(277, 64%, 61%, 0.6);
     --paragraph: hsla(0, 0%, 100%, 0.749);
-     --mainbg:  #090b1a;
+     --mainbg:  hsl(233, 49%, 7%);
 
 
 }
